applauncherd (0.21.0) unstable; urgency=low

  * 

 -- Jussi Lind <jussi.lind@nokia.com>  Fri, 04 Mar 2011 14:08:07 +0200

applauncherd (0.20.0) stable; urgency=low

  * Implemented: SWP#DUI-5045
  * Implemented: SWP#DUI-5050
  * New: Test for core dump generation with launched apps
  * Changes: add core dump test to red tests
  * New: Basic implementation of the e-booster.
  * New: Unit tests for EBooster added.
  * Changes: Indentation fixed / tabs removed from mdeclarativecache.cpp
  * Changes: e-booster tests added. Removed .launch from test applications and scripts

 -- Jussi Lind <jussi.lind@nokia.com>  Fri, 04 Mar 2011 13:59:58 +0200

applauncherd (0.19.0) stable; urgency=low
  
  * Splash command line parameters added to invoker
  * Implemented: SWP#DUI-5050
  * Fixes: NB#229983 - Applauncherd is not able to return to the boot mode
  * Fixes: NB#230055 - cores generation does not work for boosted applications

 -- Jussi Lind <jussi.lind@nokia.com>  Mon, 28 Feb 2011 13:12:59 +0200

applauncherd (0.18.4) stable; urgency=low

  * Fixes: NB#229925 - applauncherd-single-instance is missing debug symbols 

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Thu, 24 Feb 2011 12:30:42 +0200

applauncherd (0.18.3) stable; urgency=low

  * Fixes: NB#228729 - MDeclarativeBooster does [not] launch applications with meego-graphicssystem support
  * Changes: Remove tcb token from a testapp and fix credential test
  * Changes: Perf tests splitted into different packages. Fixed the co-ordinate problem

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Tue, 22 Feb 2011 12:21:06 +0200

applauncherd (0.18.2) stable; urgency=low

  * Changes: add event loop to qdeclarative booster
  * Changes: update eventhandler class to be used with d-booster
  * Changes: EventHandler works with both QApplication and MApplication event loop
  * Changes: Add interface declaration file for the mdeclarativecache library.

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Mon, 21 Feb 2011 11:01:47 +0200
