@@ -22,16 +22,19 @@
 
 #include <stdint.h>
 
+const uint32_t INVOKER_MSG_MAGIC                          = 0xb0070000;
+const uint32_t INVOKER_MSG_MAGIC_VERSION_MASK             = 0x0000ff00;
+const uint32_t INVOKER_MSG_MAGIC_VERSION                  = 0x00000300;
+const uint32_t INVOKER_MSG_MAGIC_OPTION_MASK              = 0x000000ff;
+const uint32_t INVOKER_MSG_MAGIC_OPTION_WAIT              = 0x00000001;
+const uint32_t INVOKER_MSG_MAGIC_OPTION_DLOPEN_GLOBAL     = 0x00000002;
+const uint32_t INVOKER_MSG_MAGIC_OPTION_DLOPEN_DEEP       = 0x00000004;
+const uint32_t INVOKER_MSG_MAGIC_OPTION_SINGLE_INSTANCE   = 0x00000008;
+const uint32_t INVOKER_MSG_MAGIC_OPTION_SPLASH_SCREEN     = 0x00000010;
+const uint32_t INVOKER_MSG_MAGIC_OPTION_OOM_ADJ_DISABLE   = 0x00000020;
+
+
 const uint32_t INVOKER_MSG_MASK               = 0xffff0000;
-const uint32_t INVOKER_MSG_MAGIC              = 0xb0070000;
-const uint32_t INVOKER_MSG_MAGIC_VERSION_MASK = 0x0000ff00;
-const uint32_t INVOKER_MSG_MAGIC_VERSION      = 0x00000300;
-const uint32_t INVOKER_MSG_MAGIC_OPTION_MASK  = 0x000000ff;
-const uint32_t INVOKER_MSG_MAGIC_OPTION_WAIT  = 0x00000001;
-const uint32_t INVOKER_MSG_MAGIC_OPTION_DLOPEN_GLOBAL = 0x00000002;
-const uint32_t INVOKER_MSG_MAGIC_OPTION_DLOPEN_DEEP  = 0x00000004;
-const uint32_t INVOKER_MSG_MAGIC_OPTION_SINGLE_INSTANCE  = 0x00000008;
-const uint32_t INVOKER_MSG_MAGIC_OPTION_SPLASH_SCREEN  = 0x00000010;
 const uint32_t INVOKER_MSG_NAME               = 0x5a5e0000;
 const uint32_t INVOKER_MSG_EXEC               = 0xe8ec0000;
 const uint32_t INVOKER_MSG_ARGS               = 0xa4650000;
