@@ -1,6 +1,7 @@
 applauncherd (0.21.0) unstable; urgency=low
 
-  * 
+  * Changes: Disable out of memory adjustments command line parameter added to invoker
+  * Changes: AppData code refactoring 
 
  -- Jussi Lind <jussi.lind@nokia.com>  Fri, 04 Mar 2011 14:08:07 +0200
 
